--- a/src/main/resources/lang/ua_UA.yml
+++ b/src/main/resources/lang/ua_UA.yml
@@ -27,8 +27,8 @@ DestoryDonatCase: '&cДонат Кейс ломати заборонено'
 NoKey: '&cУ вас немає ключів для цього кейсу. Можете купити їх тут >>> &6JodexIndustries.ua'
 HaveOpenCase: '&cЗачекайте, цей кейс відкривається'
 ReloadConfig: '&aКонфіг перезавантажено!'
-TitleWin: '&aВітаємо! '
-SubTitleWin: '&5ви виграли '
+TitleWin: '&aВітаємо! ' # Плейсхолдери: %group - ім'я групи; %groupdisplayname - відображаєме ім'я групи
+SubTitleWin: '&5ви виграли %groupdisplayname'
 Help:
   - '&9/%cmd help &3- &2Допомога по плагіну'
   - '&9/%cmd keys &7(&aГравець&7)&3- &2Показати ключі'
