--- a/src/main/resources/lang/ru_RU.yml
+++ b/src/main/resources/lang/ru_RU.yml
@@ -1,4 +1,4 @@
-config: '2.0' #DON'T CHANGE THIS PLEASE
+config: '2.1' #DON'T CHANGE THIS PLEASE
 
 # Локальные плейсхолдеры
 # %case - название кейса
@@ -9,7 +9,7 @@ config: '2.0' #DON'T CHANGE THIS PLEASE
 # Глобальные плейсхолдеры
 # %donatecase_keys_<casename>% - количество ключей от конкретного кейса
 
-Prefix: '&7[&5Ультра-Кейс&7] &e'
+Prefix: '&7[&cDonateCase&7] &e'
 NoPermission: '&cУ вас нет прав'
 CaseNotExist: '&cКейса &6%case &cне существует.'
 PlayerNotFound: '&cИгрок с ником &6%player &cне найден'
@@ -29,9 +29,11 @@ HaveOpenCase: '&cПодождите этот кейс открывается'
 ReloadConfig: '&aКонфиг перезагружен!'
 TitleWin: '&aПоздравляем! '# Плейсхолдеры: %group - имя группы; %groupdisplayname - отображаемое имя группы
 SubTitleWin: '&5вы выиграли %groupdisplayname'
+CasesList: '&e%num. &6%casename &3- &r%casetitle'
 Help:
   - '&9/%cmd help &3- &2Помощь по плагину'
   - '&9/%cmd keys &7(&aИгрок&7)&3- &2Показать ключи'
+  - '&9/%cmd cases &3- &2Показать все возможные кейсы'
   - '&9/%cmd create &7(&aТип кейса&7) (&aНазвание кейса&7) &3- &2Установить кейс &7(&6Смотрите на блок&7)'
   - '&9/%cmd delete &7[&aНазвание кейса&7] &3- &2Удалить кейс &7(&6Смотрите на кейс&7)'
   - '&9/%cmd givekey &7(&aИгрок&7) &7(&aТип Кейса&7) &7(&aКлючи&7) &3- &2Выдать ключи игроку'
@@ -41,7 +43,7 @@ Help:
   - '&9/%cmd reload &3- &2Перезапустить конфиг'
 HelpPlayer:
   - '&9/%cmd help &3- &2Помощь по плагину'
-  - '&9/%cmd mykeys &3- &2Показать свои ключи'
+  - '&9/%cmd keys &3- &2Показать свои ключи'
 MyKeys:
   - "&7Ваши ключи:"
   - "&c&lДонат-&a&lКейс &7- &a%donatecase_keys_case% &7ключей"
