--- a/src/main/resources/lang/ua_UA.yml
+++ b/src/main/resources/lang/ua_UA.yml
@@ -1,4 +1,4 @@
-config: '2.0' #DON'T CHANGE THIS PLEASE
+config: '2.1' #DON'T CHANGE THIS PLEASE
 
 # Локальні плейсхолдери
 # %case - назва кейсу
@@ -9,7 +9,7 @@ config: '2.0' #DON'T CHANGE THIS PLEASE
 # Глобальні плейсхолдери
 # %donatecase_keys_<casename>% - кількість ключів від конкретного кейсу
 
-Prefix: '&7[&5Ультра-Кейс&7] &e'
+Prefix: '&7[&cDonateCase&7] &e'
 NoPermission: '&cУ вас немає прав'
 CaseNotExist: '&cКейса &6%case &cне існує.'
 PlayerNotFound: '&cГравця з ніком &6%player &cне знайдено'
@@ -29,9 +29,11 @@ HaveOpenCase: '&cЗачекайте, цей кейс відкривається'
 ReloadConfig: '&aКонфіг перезавантажено!'
 TitleWin: '&aВітаємо! ' # Плейсхолдери: %group - ім'я групи; %groupdisplayname - відображаєме ім'я групи
 SubTitleWin: '&5ви виграли %groupdisplayname'
+CasesList: '&e%num. &6%casename &3- &r%casetitle'
 Help:
   - '&9/%cmd help &3- &2Допомога по плагіну'
   - '&9/%cmd keys &7(&aГравець&7)&3- &2Показати ключі'
+  - '&9/%cmd cases &3- &2Показати всі можливі кейси'
   - '&9/%cmd create &7(&aТип кейсу&7) &7(&aНазва кейсу&7) &3- &2Встановити кейс &7(&6Дивіться на блок&7)'
   - '&9/%cmd delete &7[&aНазва кейсу&7] &3- &2Удалить кейс &7(&6Дивіться на кейс&7)'
   - '&9/%cmd givekey &7(&aГравець&7) &7(&aТип кейсу&7) &7(&aКлючи&7) &3- &2Видати ключі гравцю'
@@ -41,7 +43,7 @@ Help:
   - '&9/%cmd reload &3- &2Перезапустити конфіг'
 HelpPlayer:
   - '&9/%cmd help &3- &2Допомога по плагіну'
-  - '&9/%cmd mykeys &3- &2Показати свої ключі'
+  - '&9/%cmd keys &3- &2Показати свої ключі'
 MyKeys:
   - "&7Ваші ключі:"
   - "&c&lДонат-&a&lКейс &7- &a%donatecase_keys_case% &7ключів"
