--- a/src/main/resources/lang/ru_RU.yml
+++ b/src/main/resources/lang/ru_RU.yml
@@ -11,7 +11,7 @@ config: '2.2' #DON'T CHANGE THIS PLEASE
 
 Prefix: '&7[&cDonateCase&7] &e'
 NoPermission: '&cУ вас нет прав'
-UpdateCheck: "&eНовое обновление плагина &cDonateCase &a%version &eдоступно! \n&eСкачать &f- &ahttps://www.spigotmc.org/resources/donatecase.106701/"
+UpdateCheck: "&eНовое обновление плагина &cDonateCase &a%version &eдоступно! &eСкачать &f- &ahttps://www.spigotmc.org/resources/donatecase.106701/"
 CaseNotExist: '&cКейса &6%case &cне существует.'
 PlayerNotFound: '&cИгрок с ником &6%player &cне найден'
 HasDonatCase: '&cЭтот блок уже донат кейс'
