--- a/src/main/resources/lang/ru_RU.yml
+++ b/src/main/resources/lang/ru_RU.yml
@@ -46,6 +46,7 @@ Help:
 HelpPlayer:
   - '&9/%cmd help &3- &2Помощь по плагину'
   - '&9/%cmd keys &3- &2Показать свои ключи'
+  - '&9/%cmd opencase &7(&aТип Кейса&7) &3- &2Открыть кейс'
 MyKeys:
   - "&7Ваши ключи:"
   - "&c&lДонат-&a&lКейс &7- &a%donatecase_keys_case% &7ключей"
