--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -1,4 +1,4 @@
-config: '2.3' #DON'T CHANGE THIS PLEASE
+config: '2.4' #DON'T CHANGE THIS PLEASE
 
 # Local Placeholders
 # %case - case name
@@ -35,6 +35,7 @@ CasesList: '&e%num. &6%casename &3- &r%casetitle'
 Help:
   - '&9/%cmd help &3- &2Help for the plugin'
   - '&9/%cmd keys &7(&aPlayer&7) &3- &2Show keys'
+  - '&9/%cmd opencase &7(&aCase Type&7) &3- &2Open case'
   - '&9/%cmd cases &3- &2Show all possible cases'
   - '&9/%cmd create &7(&aCase type&7) (&aCase name&7) &3- &2Set case &7(&6Look at block&7)'
   - '&9/%cmd delete &7[&aCase name&7]&3- &2Delete case &7(&6Look at case&7)'
@@ -46,6 +47,7 @@ Help:
 HelpPlayer:
   - '&9/%cmd help &3- &2Help for the plugin'
   - '&9/%cmd keys &3- &2Show your keys'
+  - '&9/%cmd opencase &7(&aCase Type&7) &3- &2Open case'
 MyKeys:
   - "&7Your keys:"
   - "&c&lDonate-&a&lCase &7- &a%donatecase_keys_case% &7keys"
