--- a/src/main/resources/lang/ua_UA.yml
+++ b/src/main/resources/lang/ua_UA.yml
@@ -1,4 +1,4 @@
-config: '2.3' #DON'T CHANGE THIS PLEASE
+config: '2.4' #DON'T CHANGE THIS PLEASE
 
 # Локальні плейсхолдери
 # %case - назва кейсу
@@ -35,17 +35,19 @@ CasesList: '&e%num. &6%casename &3- &r%casetitle'
 Help:
   - '&9/%cmd help &3- &2Допомога по плагіну'
   - '&9/%cmd keys &7(&aГравець&7)&3- &2Показати ключі'
+  - '&9/%cmd opencase &7(&aТип кейсу&7) &3- &2Відкрити кейс'
   - '&9/%cmd cases &3- &2Показати всі можливі кейси'
   - '&9/%cmd create &7(&aТип кейсу&7) &7(&aНазва кейсу&7) &3- &2Встановити кейс &7(&6Дивіться на блок&7)'
   - '&9/%cmd delete &7[&aНазва кейсу&7] &3- &2Удалить кейс &7(&6Дивіться на кейс&7)'
-  - '&9/%cmd givekey &7(&aГравець&7) &7(&aТип кейсу&7) &7(&aКлючи&7) &3- &2Видати ключі гравцю'
-  - '&9/%cmd setkey &7(&aГравець&7) &7(&aТип кейсу&7) &7(&aКлючи&7) &3- &2Встановити ключі гравцю'
+  - '&9/%cmd givekey &7(&aГравець&7) &7(&aТип кейсу&7) &7(&aКлючі&7) &3- &2Видати ключі гравцю'
+  - '&9/%cmd setkey &7(&aГравець&7) &7(&aТип кейсу&7) &7(&aКлючі&7) &3- &2Встановити ключі гравцю'
   - '&9/%cmd delkey &7(&aГравець&7) &7(&aТип кейсу&7) &3- &2Видалити всі ключі гравцю'
   - '&9/%cmd delkey all &3- &2Видалити всі ключі всім гравцям'
   - '&9/%cmd reload &3- &2Перезапустити конфіг'
 HelpPlayer:
   - '&9/%cmd help &3- &2Допомога по плагіну'
   - '&9/%cmd keys &3- &2Показати свої ключі'
+  - '&9/%cmd opencase &7(&aТип кейсу&7) &3- &2Відкрити кейс'
 MyKeys:
   - "&7Ваші ключі:"
   - "&c&lДонат-&a&lКейс &7- &a%donatecase_keys_case% &7ключів"
