--- a/src/main/resources/lang/ua_UA.yml
+++ b/src/main/resources/lang/ua_UA.yml
@@ -36,7 +36,7 @@ Help:
   - '&9/%cmd opencase &7(&aТип кейсу&7) &3- &2Відкрити кейс'
   - '&9/%cmd cases &3- &2Показати всі можливі кейси'
   - '&9/%cmd create &7(&aТип кейсу&7) &7(&aНазва кейсу&7) &3- &2Встановити кейс &7(&6Дивіться на блок&7)'
-  - '&9/%cmd delete &7[&aНазва кейсу&7] &3- &2Удалить кейс &7(&6Дивіться на кейс&7)'
+  - '&9/%cmd delete &7[&aНазва кейсу&7] &3- &2Видалити кейс &7(&6Дивіться на кейс&7)'
   - '&9/%cmd givekey &7(&aГравець&7) &7(&aТип кейсу&7) &7(&aКлючі&7) &3- &2Видати ключі гравцю'
   - '&9/%cmd setkey &7(&aГравець&7) &7(&aТип кейсу&7) &7(&aКлючі&7) &3- &2Встановити ключі гравцю'
   - '&9/%cmd delkey &7(&aГравець&7) &7(&aТип кейсу&7) &3- &2Видалити всі ключі гравцю'
