--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -1,4 +1,4 @@
-config: '2.4' #DON'T CHANGE THIS PLEASE
+config: '2.5' #DON'T CHANGE THIS PLEASE
 
 # Local Placeholders
 # %case - case name
@@ -30,6 +30,7 @@ NoKey: "&cYou don't have keys for this case. You can buy them here >>> &6JodexIn
 HaveOpenCase: '&cPlease wait this case is opening'
 ReloadConfig: '&aConfig reloaded!'
 CasesList: '&e%num. &6%casename &3- &r%casetitle'
+NumberFormatException: "&cThe string %string is not a number"
 Help:
   - '&9/%cmd help &3- &2Help for the plugin'
   - '&9/%cmd keys &7(&aPlayer&7) &3- &2Show keys'
@@ -42,6 +43,10 @@ Help:
   - '&9/%cmd delkey &7(&aPlayer&7) &7(&aCase Type&7) &3- &2Remove all keys to a player'
   - '&9/%cmd delkey all &3- &2Delete all keys for all players'
   - '&9/%cmd reload &3- &2Reload config'
+HelpAddons:
+  Format:
+    AddonName: "&6%addon"
+    AddonCommand: "&9/dc %cmd %args &3- &2%description"
 HelpPlayer:
   - '&9/%cmd help &3- &2Help for the plugin'
   - '&9/%cmd keys &3- &2Show your keys'
