--- a/src/main/resources/lang/ua_UA.yml
+++ b/src/main/resources/lang/ua_UA.yml
@@ -46,7 +46,8 @@ Help:
 HelpAddons:
   Format:
     AddonName: "&6%addon"
-    AddonCommand: "&9/dc %cmd %args &3- &2%description"
+    AddonDescription: "&3- &2%description"
+    AddonCommand: "&9/dc %cmd %args %description"
 HelpPlayer:
   - '&9/%cmd help &3- &2Допомога по плагіну'
   - '&9/%cmd keys &3- &2Показати свої ключі'
