--- a/src/main/resources/lang/ru_RU.yml
+++ b/src/main/resources/lang/ru_RU.yml
@@ -1,9 +1,9 @@
 config: '2.5' #DON'T CHANGE THIS PLEASE
 
 # Локальные плейсхолдеры
-# %case - название кейса
-# %casetitle - заглавие кейса
-# %key - количество ключей
+# %case% - название кейса
+# %casetitle% - заглавие кейса
+# %key% - количество ключей
 # %keys_<casename>% - количество ключей определённого кейса
 # %keys_<casename>_format% - количество ключей определённого кейса с форматированием
 # %player - никнейм игрока
