--- a/src/main/resources/lang/ua_UA.yml
+++ b/src/main/resources/lang/ua_UA.yml
@@ -1,9 +1,9 @@
 config: '2.5' #DON'T CHANGE THIS PLEASE
 
 # Локальні плейсхолдери
-# %case - назва кейсу
-# %casetitle - заголовок кейсу
-# %key - кількість ключів
+# %case% - назва кейсу
+# %casetitle% - заголовок кейсу
+# %key% - кількість ключів
 # %keys_<casename>% - кількість ключів окремого кейсу
 # %keys_<casename>_format% - кількість ключів з форматуванням
 # %player - нікнейм гравця
