--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -3,6 +3,7 @@ config: '2.5' #DON'T CHANGE THIS PLEASE
 # Local Placeholders
 # %case% - case name
 # %casetitle% - case title
+# %casedisplayname% - case displayname
 # %key% - number of keys
 # %keys_<casename>% - number of keys
 # %keys_<casename>_format% - number of keys with format
