--- a/src/main/resources/resources/lang/ru_RU.yml
+++ b/src/main/resources/resources/lang/ru_RU.yml
@@ -49,6 +49,8 @@ help:
   - '&9/%cmd delkey &7(&aИгрок&7) &7(&aТип Кейса&7) &3- &2Удалить все ключи игроку'
   - '&9/%cmd delkey all &3- &2Удалить все ключи всем игрокам'
   - '&9/%cmd reload &3- &2Перезапустить конфиг'
+  - '&9/%cmd addons &3- &2Показать загруженые аддоны'
+
 help-addons:
   format:
     name: "&6%addon" # Оставьте поле пустым, если вы не хотите разделять команды с именами аддонов
