--- a/src/main/resources/resources/lang/ua_UA.yml
+++ b/src/main/resources/resources/lang/ua_UA.yml
@@ -49,6 +49,8 @@ help:
   - '&9/%cmd delkey &7(&aГравець&7) &7(&aТип кейсу&7) &3- &2Видалити всі ключі гравцю'
   - '&9/%cmd delkey all &3- &2Видалити всі ключі всім гравцям'
   - '&9/%cmd reload &3- &2Перезапустити конфіг'
+  - '&9/%cmd addons &3- &2Показати завантажені аддони'
+
 help-addons:
   format:
     name: "&6%addon" # Залиште пустим, якщо не хочете відокремлювати команди назвами аддонів
