--- a/src/main/resources/resources/lang/ru_RU.yml
+++ b/src/main/resources/resources/lang/ru_RU.yml
@@ -51,6 +51,8 @@ help:
   - '&9/%cmd reload &3- &2Перезапустить конфиг'
   - '&9/%cmd addons &3- &2Показать загруженые аддоны'
   - '&9/%cmd addon &7(&aenable&7/&cdisable&7 | &aload&7/&cunload&7) (&aАддон&7) &3- &2Управление аддонами'
+  - '&9/%cmd animations &3- &2Показать список зарегистрированных анимаций'
+  - '&9/%cmd actions &3- &2Показать список зарегистрированных действий'
 
 help-addons:
   format:
