Update lang files

--- a/src/main/resources/resources/lang/en_US.yml
+++ b/src/main/resources/resources/lang/en_US.yml
@@ -28,7 +28,7 @@ keys-given: '&ePlayer &6%player &egiven &c%key &ekey(s)'
 keys-given-target: '&eYou have been given &c%key &ecase keys &6%casetitle'
 keys-sets: '&ePlayer &6%player &eset &c%key &ekey(s)'
 keys-sets-target: '&eYou have been set &c%key &ecase keys &6%casetitle'
-keys-cleared: '&ePlayer &6%player &ehad all the keys of case &6%case &eremoved'
+keys-cleared: '&ePlayer &6%player &ehad &c%key &ekeys removed from &6%case'
 all-keys-cleared: '&eAll player keys have been removed'
 case-destroy-disallow: '&cDonate Case is forbidden to break'
 no-keys: "&cYou don't have keys for this case. You can buy them here >>> &6JodexIndustries.com"
@@ -46,7 +46,7 @@ help:
   - '&9/%cmd delete &7[&aCase name&7]&3- &2Delete case &7(&6Look at case&7)'
   - '&9/%cmd givekey &7(&aPlayer&7) &7(&aCase Type&7) &7(&aKeys&7) &3- &2Give keys to player'
   - '&9/%cmd setkey &7(&aPlayer&7) &7(&aCase Type&7) &7(&aKeys&7) &3- &2Set player keys'
-  - '&9/%cmd delkey &7(&aPlayer&7) &7(&aCase Type&7) &3- &2Remove all keys to a player'
+  - '&9/%cmd delkey &7(&aPlayer&7) &7(&aCase Type&7) &7&a[Keys&7] &3- &2Remove keys to a player'
   - '&9/%cmd delkey all &3- &2Delete all keys for all players'
   - '&9/%cmd reload &3- &2Reload config'
   - '&9/%cmd addons &3- &2Show loaded addons'
