--- a/src/main/resources/resources/lang/ru_RU.yml
+++ b/src/main/resources/resources/lang/ru_RU.yml
@@ -28,7 +28,7 @@ keys-given: '&eИгроку &6%player &eвыдано &c%key &eключей'
 keys-given-target: '&eВам было выдано &c%key &eключей от кейса &6%casetitle'
 keys-sets: '&eИгроку &6%player &eустановлено &c%key &eключей'
 keys-sets-target: '&eВам было установлено &c%key &eключей от кейса &6%casetitle'
-keys-cleared: '&eИгроку &6%player &eудалено все ключи кейса %case'
+keys-cleared: '&eИгроку &6%player &eудалено &c%key &eключей от кейса %case'
 all-keys-cleared: '&eВсе ключи игроков были удалены'
 case-destroy-disallow: '&cДонат Кейс ломать запрещено'
 no-keys: '&cУ вас нет ключей для этого кейса. Можете купить их тут >>> &6JodexIndustries.ru'
@@ -46,7 +46,7 @@ help:
   - '&9/%cmd delete &7[&aНазвание кейса&7] &3- &2Удалить кейс &7(&6Смотрите на кейс&7)'
   - '&9/%cmd givekey &7(&aИгрок&7) &7(&aТип Кейса&7) &7(&aКлючи&7) &3- &2Выдать ключи игроку'
   - '&9/%cmd setkey &7(&aИгрок&7) &7(&aТип Кейса&7) &7(&aКлючи&7) &3- &2Установить ключи игроку'
-  - '&9/%cmd delkey &7(&aИгрок&7) &7(&aТип Кейса&7) &3- &2Удалить все ключи игроку'
+  - '&9/%cmd delkey &7(&aИгрок&7) &7(&aТип Кейса&7) &7&a[Ключи&7] &3- &2Удалить ключи игроку'
   - '&9/%cmd delkey all &3- &2Удалить все ключи всем игрокам'
   - '&9/%cmd reload &3- &2Перезапустить конфиг'
   - '&9/%cmd addons &3- &2Показать загруженые аддоны'
