--- a/src/main/resources/resources/lang/ua_UA.yml
+++ b/src/main/resources/resources/lang/ua_UA.yml
@@ -28,7 +28,7 @@ keys-given: '&eГравцю &6%player &eвидано &c%key &eключів'
 keys-given-target: '&eВам було видано &c%key &eключів від кейса &6%casetitle'
 keys-sets: '&eГравцю &6%player &eустановлено &c%key &eключів'
 keys-sets-target: '&eВам було установлено &c%key &eключів від кейса &6%casetitle'
-keys-cleared: '&eГравцю &6%player &eвидалено всі ключі від кейса %case'
+keys-cleared: '&eУ гравця &6%player &eбуло вилучено &c5 &eключів від кейсу &6%case'
 all-keys-cleared: '&eВсі ключі гравців були видалені'
 case-destroy-disallow: '&cДонат Кейс ломати заборонено'
 no-keys: '&cУ вас немає ключів для цього кейсу. Можете купити їх тут >>> &6JodexIndustries.ua'
@@ -46,7 +46,7 @@ help:
   - '&9/%cmd delete &7[&aНазва кейсу&7] &3- &2Видалити кейс &7(&6Дивіться на кейс&7)'
   - '&9/%cmd givekey &7(&aГравець&7) &7(&aТип кейсу&7) &7(&aКлючі&7) &3- &2Видати ключі гравцю'
   - '&9/%cmd setkey &7(&aГравець&7) &7(&aТип кейсу&7) &7(&aКлючі&7) &3- &2Встановити ключі гравцю'
-  - '&9/%cmd delkey &7(&aГравець&7) &7(&aТип кейсу&7) &3- &2Видалити всі ключі гравцю'
+  - '&9/%cmd delkey &7(&aГравець&7) &7(&aТип кейсу&7) &7&a[Ключі&7] &3- &2Видалити ключі гравцю'
   - '&9/%cmd delkey all &3- &2Видалити всі ключі всім гравцям'
   - '&9/%cmd reload &3- &2Перезапустити конфіг'
   - '&9/%cmd addons &3- &2Показати завантажені аддони'
