--- a/src/main/resources/resources/lang/ru_RU.yml
+++ b/src/main/resources/resources/lang/ru_RU.yml
@@ -46,7 +46,7 @@ help:
   - '&9/%cmd delete &7[&aНазвание кейса&7] &3- &2Удалить кейс &7(&6Смотрите на кейс&7)'
   - '&9/%cmd givekey &7(&aИгрок&7) &7(&aТип Кейса&7) &7(&aКлючи&7) &3- &2Выдать ключи игроку'
   - '&9/%cmd setkey &7(&aИгрок&7) &7(&aТип Кейса&7) &7(&aКлючи&7) &3- &2Установить ключи игроку'
-  - '&9/%cmd delkey &7(&aИгрок&7) &7(&aТип Кейса&7) &7&a[Ключи&7] &3- &2Удалить ключи игроку'
+  - '&9/%cmd delkey &7(&aИгрок&7) &7(&aТип Кейса&7) &7[&aКлючи&7] &3- &2Удалить ключи игроку'
   - '&9/%cmd delkey all &3- &2Удалить все ключи всем игрокам'
   - '&9/%cmd reload &3- &2Перезапустить конфиг'
   - '&9/%cmd addons &3- &2Показать загруженые аддоны'
