--- a/src/main/resources/resources/lang/ru_RU.yml
+++ b/src/main/resources/resources/lang/ru_RU.yml
@@ -53,6 +53,7 @@ help:
   - '&9/%cmd addon &7(&aenable&7/&cdisable&7 | &aload&7/&cunload&7) (&aАддон&7) &3- &2Управление аддонами'
   - '&9/%cmd animations &3- &2Показать список зарегистрированных анимаций'
   - '&9/%cmd actions &3- &2Показать список зарегистрированных действий'
+  - '&9/%cmd materials &3- &2Показать список зарегистрированных материалов'
 
 help-addons:
   format:
