--- a/src/main/resources/resources/lang/en_US.yml
+++ b/src/main/resources/resources/lang/en_US.yml
@@ -53,6 +53,7 @@ help:
   - '&9/%cmd addon &7(&aenable&7/&cdisable&7 | &aload&7/&cunload&7) (&aAddon&7) &3- &2Manage addons'
   - '&9/%cmd animations &3- &2Show list of registered animations'
   - '&9/%cmd actions &3- &2Show list of registered actions'
+  - '&9/%cmd materials &3- &2Show list of registered materials'
 
 help-addons:
   format:
