Combine all registry command to /dc registry

--- a/src/main/resources/resources/lang/ua_UA.yml
+++ b/src/main/resources/resources/lang/ua_UA.yml
@@ -51,9 +51,8 @@ help:
   - '&9/%cmd reload &3- &2Перезапустити конфіг'
   - '&9/%cmd addons &3- &2Показати завантажені аддони'
   - '&9/%cmd addon &7(&aenable&7/&cdisable&7 | &aload&7/&cunload&7) (&aАддон&7) &3- &2Управління аддонами'
-  - '&9/%cmd animations &3- &2Показати список зареєстрованих анімацій'
-  - '&9/%cmd actions &3- &2Показати список зареєстрованих дій'
-  - '&9/%cmd materials &3- &2Показати список зареєстрованих матеріалів'
+  - "&9/%cmd registry &7(&aanimations&7|&aactions&7|&amaterials&7) &3- &2Показати список зареєстрованих об'єктів реєстру"
+
 
 help-addons:
   format:
